# packager.rs

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  notes.md
.github/workflows/: build.yml
src/: main.rs
src/app/: mod.rs
src/codec/: mod.rs
src/codec/h264/: mod.rs  sequence_parameter_set.rs
src/container/: mod.rs
src/container/isobmff/: mod.rs
src/container/remux/: mod.rs
src/container/transport_stream/: adts.rs  elementary_stream_type.rs  mod.rs  pes_packet.rs  program_map_table.rs  ts_packet.rs
src/container/writer/: mod.rs  mp4_writer.rs
src/core/: injector.rs
src/error/: error_code.rs  isobmff_errors.rs  mod.rs
src/inject_attribute/: Cargo.toml
src/inject_attribute/src/: container.rs  lib.rs  metadata.rs
src/isobmff/: mod.rs
src/isobmff/boxes/: hdlr.rs  iso_box.rs  mod.rs  mvhd.rs  sidx.rs  stsd.rs  tfdt.rs  tfhd.rs  tkhd.rs  trun.rs
src/isobmff/configuration_records/: avcC.rs  es_descriptor.rs  mod.rs
src/isobmff/descriptors/: aac_audio_specific_config.rs  dec_config_descriptor.rs  es_descriptor.rs  mod.rs
src/isobmff/nal/: mod.rs  nal_unit.rs
src/isobmff/sample_entry/: audio_sample_entry.rs  avc_sample_entry.rs  mod.rs  mp4a_sample_entry.rs  (+2 more)
src/manifest/: manifest_controller.rs  manifest_generator.rs  media_info.rs  mod.rs
src/media/: media_info_generator.rs  mod.rs
src/transcoder/: bento.rs  ffmpeg.rs  mod.rs
src/transport_stream/: elementary_stream_type.rs  mod.rs  pes_packet.rs  program_association_table.rs  program_map_table.rs  ts_packet.rs
src/util/: bit_reader.rs  iso_639.rs  logger.rs  mod.rs
(+55 files in other folders)
