[package]
name = "packager"
version = "0.1.0"
authors = ["Benjamin Toofer <benjamintoofer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.8.2" }